--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,8 +1,6 @@
 {
   "branches": [
-    "main",
-    { "name": "beta", "prerelease": true },
-    { "name": "alpha", "prerelease": true }
+    "main"
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
